<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/row1N"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editN1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/n1"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editN2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/n2"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editN3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/n3"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/row2N"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editN4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/n4"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editN5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/n5"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editN6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/n6"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/textErgebnisNoten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/ergebnis"
        android:minHeight="100dp"
        android:text=""
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnResetNoten"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="resetNoten"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btnSpeichernNoten"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:enabled="false"
            android:onClick="speicherNoten"
            android:text="@string/speichern" />

        <Button
            android:id="@+id/btnBerechnenNoten"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/btnResetNoten"
            android:layout_toRightOf="@+id/btnResetNoten"
            android:onClick="berechneNoten"
            android:text="@string/berechnen" />
    </RelativeLayout>
</LinearLayout>