<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/row1P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editP15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p15"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editP14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p14"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p13"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p12"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p11"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p10"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/row2P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editP9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p9"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p8"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p7"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p6"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p5"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p4"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/row3P"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editP3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p3"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p2"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p1"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editP0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/p0"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text=""
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text=""
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/textErgebnisPunkte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginTop="16dp"
            android:hint="@string/ergebnis"
            android:text=""
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnBerechnePunkte"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berechnen"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/btnResetPunkte"
                android:layout_toEndOf="@+id/btnResetPunkte" />

            <Button
                android:id="@+id/btnResetPunkte"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>