<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="2sp"
        android:paddingBottom="4dp"
        android:text="@string/dialog_info"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/dialog_mail"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/dialog_web"
        android:textSize="16sp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/schnitte_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/schnitte_logo"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>
</LinearLayout>