<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/row1N"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editN1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/n1"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editN2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/n2"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editN3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/n3"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/row2N"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editN4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/n4"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editN5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/n5"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editN6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/n6"
                android:inputType="number"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/textErgebnisNoten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:layout_marginTop="16dp"
            android:hint="@string/ergebnis"
            android:text=""
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnResetNoten"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/btnBerechneNoten"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berechnen"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/btnResetNoten"
                android:layout_toEndOf="@+id/btnResetNoten" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>